public-healthcheck/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-healthcheck
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: public-healthcheck
